# lrDMS-IRED

./: .env.sample  LICENSE  README.md  contribute.sh  environment.yaml  pyproject.toml
combinability_epistasis_graphs/: README.md  min_dimer_distances.npy
data/: 5ocm.cif  README.md  aa_index_pca19_7.npy  srired_active_data.csv  srired_esm2_predictions_single_mutants.csv  srired_inactive_data.csv  srired_tranception_predictions_plm_only.csv  srired_tranception_predictions_plm_with_truncated_msa.csv
data/processed/: higher_processed.csv  singles_processed.csv
epistasis/: 221111_CPA_merge_filtered.csv  LICENSE  README.md  main.py
epistasis_combinability/: Epistasis_analysis.ipynb  README.md  analysis_utils.py  epistasis_analysis.py  pcIRED_min_ca_dimer_distances.npy  pcired_active_data.csv  plotting_utils.py
notebooks/: Epistasis_analysis.ipynb  README.md  data_analysis.ipynb  double_mutant_model_analysis.ipynb  single_mutant_model_analysis.ipynb
scripts/: README.md  clustering_automator.py  tsv2fasta.py  umi_extract.py  vcf2fasta.py  vif_generator.py
src/: analysis_utils.py
src/lrdms/: __init__.py  analysis_utils.py  constants.py  main.py  metrics.py
src/lrdms/data/: dataset.py  predictions.py  split.py  srired.py
src/lrdms/eval/: learning_curves.py  metrics.py
src/lrdms/features/: aaindex.py  dms.py  dynamics.py  structure.py  tokenizer.py
src/lrdms/model/: double_mutations.py  esm.py  single_mutations.py  tranception.py
src/lrdms/utils/: common.py  mutations.py
